# anaya-scan

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  anaya.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml  release.yml
anaya/: config.py  db.py
anaya/api/: app.py  health.py  middleware.py  webhooks.py
anaya/engine/: llm_guard.py  models.py  orchestrator.py  rule_loader.py  utils.py
anaya/engine/compliance/: __init__.py  indexer.py  models.py  pii_mapper.py  universal_indexer.py
anaya/engine/compliance/analyzers/: __init__.py  base.py  breach_notification.py  children_data.py  consent.py  data_localisation.py  data_minimisation.py  data_retention.py  encryption.py  erasure.py  runner.py
anaya/engine/scanners/: ast_scanner.py  base.py  llm_enhancer.py  llm_scanner.py  pattern.py
anaya/github/: __init__.py  auth.py  check_runs.py  client.py  models.py  sarif.py
anaya/packs/generic/: _pack.yml  api-security.yml  audit-logging.yml  cert-in-directions.yml  dpdp-act.yml  owasp-top10.yml  pii-handling.yml  secrets-detection.yml  tls-encryption.yml
anaya/reporters/: __init__.py  check_run.py  comment.py  compliance_comment.py  pr_review.py  sarif_builder.py  table.py
anaya/worker/: celery_app.py  tasks.py
cli/: __init__.py  main.py
docs/: azure-hosting.md  ci-cd-integration.md  configuration.md  faq.md  getting-started.md  rule-authoring.md
tests/: conftest.py  test_api.py  test_ast_scanner.py  test_baseline_ci.py  test_github_orchestrator.py  test_inline_suppression.py  test_llm_scanner.py  test_pattern_scanner.py  test_rule_loader.py
tests/fixtures/javascript/clean/: audit.js  owasp.js  pii.js  secrets.js  tls.js
tests/fixtures/javascript/dirty/: audit.js  owasp.js  pii.js  secrets.js  tls.js
tests/fixtures/packs/: test-pack.yml
tests/fixtures/python/clean/: audit.py  owasp.py  pii.py  secrets.py  tls.py
tests/fixtures/python/dirty/: audit.py  owasp.py  pii.py  secrets.py  tls.py
